--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,15 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 
+# =========================
+# VS Files
+# =========================
+
+*.sln
+*.suo
+Properties/*
+obj/*
+
 # OSX
 # =========================
 
