--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ $RECYCLE.BIN/
 
 *.sln
 *.suo
-Properties/*
-obj/*
+MANCAL_WEB/Properties/*
+MANCAL_WEB/obj/*
 
 # OSX
 # =========================
