Modificacion y Nuevos Archivos
se modifica gitignore v3 ademas se agregan masterpage login logout e
index page

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ $RECYCLE.BIN/
 
 *.sln
 *.suo
-MANCAL_WEB/Properties/*
-MANCAL_WEB/obj/*
+/MANCAL_WEB/Properties/*
+/MANCAL_WEB/obj/*
 
 # OSX
 # =========================
