--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ Temporary Items
 /MANCAL_WEB/MANCAL_WEB/obj/
 /MANCAL_WCF/MANCAL_WCF/Properties/
 /MANCAL_WCF/MANCAL_WCF/obj/
+/MANCAL_WEB/MANCAL_WEB_BL/Properties/
+/MANCAL_WEB/MANCAL_WEB_BL/obj/
