--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,19 @@ Temporary Items
 .apdisk
 *.sln
 *.suo
+*.edmx
+*.dll
+#
+/MANCAL_WEB/MANCAL_WEB/bin/
+/MANCAL_WCF_CBO/MANCAL_WCF_CBO/bin/
+/MANCAL_WCF/MANCAL_WCF/bin/
 /MANCAL_WEB/MANCAL_WEB/Properties/
 /MANCAL_WEB/MANCAL_WEB/obj/
+/MANCAL_WCF_CBO/MANCAL_WCF_CBO/Properties/
+/MANCAL_WCF_CBO/MANCAL_WCF_CBO/obj/
 /MANCAL_WCF/MANCAL_WCF/Properties/
 /MANCAL_WCF/MANCAL_WCF/obj/
 /MANCAL_WEB/MANCAL_WEB_BL/Properties/
 /MANCAL_WEB/MANCAL_WEB_BL/obj/
+/MANCAL_WEB/MANCAL_WEB_CLASS/Properties/
+/MANCAL_WEB/MANCAL_WEB_CLASS/obj/
