Cambios WebService y capas
se eliminan los webservices y se reemplazan agregandolos en las capas
correspondientes del proyecto

--- a/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
+++ b/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
@@ -40,6 +40,14 @@
       <HintPath>..\..\..\..\AjaxControlToolkit.Binary.NET40\AjaxMin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Oracle.DataAccess, Version=4.112.3.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\app\wcontreras\product\11.2.0\client_4\odp.net\bin\4\Oracle.DataAccess.dll</HintPath>
+    </Reference>
+    <Reference Include="Oracle.Web, Version=4.112.3.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\app\wcontreras\product\11.2.0\client_4\ASP.NET\bin\4\Oracle.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
