--- a/MANCAL_WEB/MANCAL_WEB_DL/MANCAL_WEB_DL.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_DL/MANCAL_WEB_DL.csproj
@@ -45,8 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dl_carga_cbo.cs" />
     <Compile Include="dl_detalle_pro.cs" />
     <Compile Include="dl_equipo.cs" />
+    <Compile Include="dl_login.cs" />
+    <Compile Include="dl_menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
