Cambios formulario proyecto
se cambia el formulario de proyecto para el ingreso de equipos se quita
tabla actual dond e se ingresaban datos y se reemplaza con jquery y
ajax.
Se deja comentado lo que no se utiliza en lo mencionado en el parrafo
anterior.

--- a/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
+++ b/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
@@ -40,6 +40,10 @@
       <HintPath>..\..\..\..\AjaxControlToolkit.Binary.NET40\AjaxMin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.DataAccess, Version=4.112.3.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\app\wcontreras\product\11.2.0\client_4\odp.net\bin\4\Oracle.DataAccess.dll</HintPath>
@@ -100,6 +104,8 @@
     <Content Include="logout.aspx" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-ui.js" />
+    <Content Include="Scripts\jquery.cookie.js" />
+    <Content Include="Scripts\jsEquipo.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -265,7 +271,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>5047</DevelopmentServerPort>
+          <DevelopmentServerPort>10534</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
