Cambios Textos Factura , Sector Entrega
*se cambian la forma de ingresar los textos mediante un dialog con items
seleccionables y editables

*se cambia la forma de avisar en caso de que se con entrega donde el
cliente al seleccionar esa opcion mostrara automaticamente un dialog
donde ingresar el sector

--- a/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CotizacionLugarEntr.cs" />
     <Compile Include="CotizacionRegion.cs" />
     <Compile Include="CotizacionTarifa.cs" />
+    <Compile Include="CotizacionTextoFactura.cs" />
     <Compile Include="CotizacionTFactura.cs" />
     <Compile Include="CotizacionTipo.cs" />
     <Compile Include="CotizacionTPEntrega.cs" />
