Dcoumentos adjuntos, calculo margenes y total
* se agrega sector para adjuntar documentos mediante un dialog donde
posteriormente se visualiza en una tabla los archivos adjuntos

*se agregan clases para el calculo total y de margenes para el proyecto
se deja trabjando en las funciones que retornan este valor

--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -10,7 +10,19 @@
       <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.25.51)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=sernac)));user id=sico_mancal;password=mancal_sico;" providerName="Oracle.DataAccess.Client" />
     </connectionStrings>
     <system.web>
-        <compilation debug="true" targetFramework="4.0" />
+      <compilation debug="true" targetFramework="4.0" >
+        <assemblies>
+          <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+          <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+          <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        </assemblies>
+      </compilation>
+      <identity impersonate="true"/>
+      <authentication mode="Windows"/>
+      <customErrors mode="Off"/>
+      <httpHandlers>
+        <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
+      </httpHandlers>
     </system.web>
     <system.serviceModel>
       <bindings>
