--- a/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CotizacionAdjunto.cs" />
     <Compile Include="CotizacionEnvio.cs" />
     <Compile Include="CotizacionGarantia.cs" />
     <Compile Include="CotizacionGarantiaVal.cs" />
