--- a/MANCAL_WEB/MANCAL_WEB_BL/MANCAL_WEB_BL.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_BL/MANCAL_WEB_BL.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="bl_adjunto.cs" />
     <Compile Include="bl_carga_cbo.cs" />
     <Compile Include="bl_codificar_pwd.cs" />
     <Compile Include="bl_detalle_pro.cs" />
