--- a/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
@@ -40,8 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cotizacion.cs" />
     <Compile Include="CotizacionAdjunto.cs" />
+    <Compile Include="CotizacionCliente.cs" />
     <Compile Include="CotizacionEnvio.cs" />
+    <Compile Include="CotizacionEstadoCliente.cs" />
     <Compile Include="CotizacionGarantia.cs" />
     <Compile Include="CotizacionGarantiaVal.cs" />
     <Compile Include="CotizacionJefe.cs" />
@@ -53,6 +56,7 @@
     <Compile Include="CotizacionTextoFactura.cs" />
     <Compile Include="CotizacionTFactura.cs" />
     <Compile Include="CotizacionTipo.cs" />
+    <Compile Include="CotizacionTipoCliente.cs" />
     <Compile Include="CotizacionTPEntrega.cs" />
     <Compile Include="CotizacionTPFactura.cs" />
     <Compile Include="CotizacionTrabajo.cs" />
