Cambios diseño cot calibracion/muestra equipo
* Se cambia diseño cot calibracion a pestañas para que se vea algo mas
ordenado

* Falta arreglar diseño de algunas pestañas en la cot calibracion

* Se agregan metodos para buscar equipo mediant eparametros

* Se deja validado que si no hay cliente previo seleccionado no busca
equipo y cierra ambas pestañas (mensaje/busca eq)

--- a/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CotizacionAdjunto.cs" />
     <Compile Include="CotizacionCliente.cs" />
     <Compile Include="CotizacionEnvio.cs" />
+    <Compile Include="CotizacionEquipo.cs" />
     <Compile Include="CotizacionEstadoCliente.cs" />
     <Compile Include="CotizacionGarantia.cs" />
     <Compile Include="CotizacionGarantiaVal.cs" />
