--- a/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
+++ b/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
@@ -39,9 +39,6 @@
     <Reference Include="AjaxMin">
       <HintPath>..\..\..\..\AjaxControlToolkit.Binary.NET40\AjaxMin.dll</HintPath>
     </Reference>
-    <Reference Include="Blowfish">
-      <HintPath>..\..\..\..\..\Desktop\Blowfish\Blowfish.dll</HintPath>
-    </Reference>
     <Reference Include="IKVM.OpenJDK.Core">
       <HintPath>..\..\..\..\..\Desktop\Blowfish\IKVM.OpenJDK.Core.dll</HintPath>
     </Reference>
@@ -117,6 +114,12 @@
     <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jsEquipo.js" />
+    <None Include="Service References\ServiceEncripta\configuration91.svcinfo" />
+    <None Include="Service References\ServiceEncripta\configuration.svcinfo" />
+    <None Include="Service References\ServiceEncripta\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -257,6 +260,11 @@
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\ServiceEncripta\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="MasterPage.Master" />
@@ -273,6 +281,15 @@
       <Project>{FF7397D2-03D8-4B4E-817A-EFEEF9A6631B}</Project>
       <Name>MANCAL_WEB_CLASS</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceEncripta\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ServiceEncripta\Encripta_ws.wsdl" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
