--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -14,7 +14,7 @@
         <assemblies>
           <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
           <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-          <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+          <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>          
         </assemblies>
       </compilation>
       <identity impersonate="true"/>
@@ -40,4 +40,16 @@
         </dependentAssembly>
       </assemblyBinding>
     </runtime>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="Encripta_wsSOAPBinding" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://WEB/ENCRIPTA_WS_WEB/awws/Encripta_ws.awws"
+                binding="basicHttpBinding" bindingConfiguration="Encripta_wsSOAPBinding"
+                contract="ServiceEncripta.Encripta_wsSOAPPortType" name="Encripta_wsSOAPPort" />
+        </client>
+    </system.serviceModel>
 </configuration>
