Cambios transporte, comision, total
* se deja funcionando cuando se activa o desactiva el transporte en la
cotizacion

* se deja funcionando la comision en la cotizacion tanto en activacion
como desactivacion, falta validar cuando se cambie entre regiones y no
se vuelva al estado inicial

* se deja funcionando el calculo de margenes de la cotizacion y su
respectivo total

--- a/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Cotizacion.cs" />
     <Compile Include="CotizacionAdjunto.cs" />
     <Compile Include="CotizacionCliente.cs" />
+    <Compile Include="CotizacionComision.cs" />
     <Compile Include="CotizacionEnvio.cs" />
     <Compile Include="CotizacionEquipo.cs" />
     <Compile Include="CotizacionEquipoCal.cs" />
