Cambios puntos cal, precios, grid det
* se deja a medio funcionar el apartado de agregar puntos para el equipo

* se deja funcionando el tema de los precios validado

* se agregan las funciones anteriores al grid

--- a/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_CLASS/MANCAL_WEB_CLASS.csproj
@@ -57,6 +57,8 @@
     <Compile Include="CotizacionLugarEjec.cs" />
     <Compile Include="CotizacionLugarEntr.cs" />
     <Compile Include="CotizacionMagnitud.cs" />
+    <Compile Include="CotizacionMagnitudFuncion.cs" />
+    <Compile Include="CotizacionPunto.cs" />
     <Compile Include="CotizacionRegion.cs" />
     <Compile Include="CotizacionTarifa.cs" />
     <Compile Include="CotizacionTextoFactura.cs" />
