Codigo Insert Cotizacion
* se realizan metodos para la insercion de la cotizacion

* se hace codigo para pasar datos de la cotizacion en xml y sean leidos
desde los procedimientos en la DB

* codigo ajax, webmethod y metodos internos realizados y probados

--- a/MANCAL_WEB/MANCAL_WEB_BL/MANCAL_WEB_BL.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_BL/MANCAL_WEB_BL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="bl_carga_cbo.cs" />
     <Compile Include="bl_cliente.cs" />
     <Compile Include="bl_codificar_pwd.cs" />
+    <Compile Include="bl_cotizacion.cs" />
     <Compile Include="bl_detalle_pro.cs" />
     <Compile Include="bl_equipo.cs" />
     <Compile Include="bl_login.cs" />
