Mostrar, Guardar Cotizacion - Reportes
* se deja funcionando el guardar cotizacion
* se deja funcionando los reportes al guardar la cotizacion
* se encuentran funcionando las busquedas de cotizacion
* se deja funcionando el mostrar la cotizacion seleccionada pero aun no
se muestra el detalle de la cotizacion y los puntos
* falta agregar el reporte de los puntos al imprimir la cotizacion

--- a/MANCAL_WEB/MANCAL_WEB_BL/MANCAL_WEB_BL.csproj
+++ b/MANCAL_WEB/MANCAL_WEB_BL/MANCAL_WEB_BL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="bl_mail.cs" />
     <Compile Include="bl_menu.cs" />
     <Compile Include="bl_pwd.cs" />
+    <Compile Include="bl_reporte.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
