--- a/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
+++ b/MANCAL_WEB/MANCAL_WEB/MANCAL_WEB.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -75,6 +76,10 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="Telerik.Reporting, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be" />
+    <Reference Include="Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="aprobacion.aspx" />
@@ -93,15 +98,19 @@
     <Content Include="frm_pwd\pwd_master_res.aspx" />
     <Content Include="frm_pwd\pwd_smaster_mod.aspx" />
     <Content Include="frm_pwd\pwd_smaster_res.aspx" />
+    <Content Include="frm_reporte\rpt_cotizacion_cal.aspx" />
     <Content Include="img_files\ajax-loader.gif" />
     <Content Include="img_files\Attach.png" />
     <Content Include="img_files\cross_icon_normal.png" />
     <Content Include="img_files\data_backup.png" />
     <Content Include="img_files\loading.gif" />
     <Content Include="img_files\LOGO DTS UN Man Cal.bmp" />
+    <Content Include="img_files\logo inn - chile.gif" />
+    <Content Include="img_files\logo inn.png" />
     <Content Include="img_files\logo.png" />
     <Content Include="img_files\logomanttocal.png" />
     <Content Include="img_files\logo_dts.png" />
+    <Content Include="img_files\logo_DTS_solo.png" />
     <Content Include="img_files\search_ico.png" />
     <Content Include="img_files\Stage_BG_btm.png" />
     <Content Include="img_files\titlebar_bg.jpg" />
@@ -224,6 +233,13 @@
     <Compile Include="frm_pwd\pwd_smaster_res.aspx.designer.cs">
       <DependentUpon>pwd_smaster_res.aspx</DependentUpon>
     </Compile>
+    <Compile Include="frm_reporte\rpt_cotizacion_cal.aspx.cs">
+      <DependentUpon>rpt_cotizacion_cal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frm_reporte\rpt_cotizacion_cal.aspx.designer.cs">
+      <DependentUpon>rpt_cotizacion_cal.aspx</DependentUpon>
+    </Compile>
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -260,6 +276,30 @@
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rpt_cal\rptCotizacionCal_DetPunto.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacionCal_DetPunto.Designer.cs">
+      <DependentUpon>rptCotizacionCal_DetPunto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacion_Resp.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacion_Resp.Designer.cs">
+      <DependentUpon>rptCotizacion_Resp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacionCal.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacionCal.Designer.cs">
+      <DependentUpon>rptCotizacionCal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacionCal_Det.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="rpt_cal\rptCotizacionCal_Det.Designer.cs">
+      <DependentUpon>rptCotizacionCal_Det.cs</DependentUpon>
+    </Compile>
     <Compile Include="Service References\ServiceEncripta\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -290,6 +330,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\ServiceEncripta\Encripta_ws.wsdl" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="rpt_cal\rptCotizacionCal_DetPunto.resx">
+      <DependentUpon>rptCotizacionCal_DetPunto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rpt_cal\rptCotizacion_Resp.resx">
+      <DependentUpon>rptCotizacion_Resp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rpt_cal\rptCotizacionCal.resx">
+      <DependentUpon>rptCotizacionCal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rpt_cal\rptCotizacionCal_Det.resx">
+      <DependentUpon>rptCotizacionCal_Det.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
