--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -1,55 +1,54 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-    <connectionStrings>
-      <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.25.51)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=sernac)));user id=sico_mancal;password=mancal_sico;" providerName="Oracle.DataAccess.Client" />
-    </connectionStrings>
-    <system.web>
-      <compilation debug="true" targetFramework="4.0" >
-        <assemblies>
-          <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-          <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-          <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>          
-        </assemblies>
-      </compilation>
-      <identity impersonate="true"/>
-      <authentication mode="Windows"/>
-      <customErrors mode="Off"/>
-      <httpHandlers>
-        <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
-      </httpHandlers>
-    </system.web>    
-    <system.web.extensions>
-      <scripting>
-        <webServices>
-          <jsonSerialization maxJsonLength="50000000" />
-        </webServices>
-        <scriptResourceHandler enableCompression="true" enableCaching="true" />
-      </scripting>
-    </system.web.extensions>
-    <runtime>
-      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-        <dependentAssembly>
-          <assemblyIdentity name="Oracle.DataAccess" publicKeyToken="89B483F429C47342" />
-          <publisherPolicy apply="no" />
-        </dependentAssembly>
-      </assemblyBinding>
-    </runtime>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="Encripta_wsSOAPBinding" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://WEB/ENCRIPTA_WS_WEB/awws/Encripta_ws.awws"
-                binding="basicHttpBinding" bindingConfiguration="Encripta_wsSOAPBinding"
-                contract="ServiceEncripta.Encripta_wsSOAPPortType" name="Encripta_wsSOAPPort" />
-        </client>
-    </system.serviceModel>
+  <connectionStrings>
+    <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.25.51)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=sernac)));user id=sico_mancal;password=mancal_sico;" providerName="Oracle.DataAccess.Client"/>
+  </connectionStrings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=A9D7983DFCC261BE"/>
+        <add assembly="Telerik.Reporting, Version=9.0.15.225, Culture=neutral, PublicKeyToken=A9D7983DFCC261BE"/>
+      </assemblies>
+    </compilation>
+    <identity impersonate="true"/>
+    <authentication mode="Windows"/>
+    <customErrors mode="Off"/>
+    <httpHandlers>
+      <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
+      <add verb="*" path="Telerik.ReportViewer.axd" type = "Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be" />
+    </httpHandlers>
+  </system.web>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+      <scriptResourceHandler enableCompression="true" enableCaching="true"/>
+    </scripting>
+  </system.web.extensions>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Oracle.DataAccess" publicKeyToken="89B483F429C47342"/>
+        <publisherPolicy apply="no"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="Encripta_wsSOAPBinding"/>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://WEB/ENCRIPTA_WS_WEB/awws/Encripta_ws.awws" binding="basicHttpBinding" bindingConfiguration="Encripta_wsSOAPBinding" contract="ServiceEncripta.Encripta_wsSOAPPortType" name="Encripta_wsSOAPPort"/>
+    </client>
+  </system.serviceModel>
 </configuration>
