Manejo tiempo sesion, otros
* se agrega funciones para el manejo de sesion y extenderlas segun sea
el resultado dado por el usuario

* se arregla actualizar cotizacion queda funcionando

* se agrega a tablas de punto comentario de punto

* se agrega a tabla log para registrar cambios y otros

* se modifica bl_cotizacion para pasar usuario de pc

--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -25,6 +25,11 @@
       <add verb="*" path="Telerik.ReportViewer.axd" type = "Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be" />
     </httpHandlers>
   </system.web>
+  <appSettings>
+    <add key="SessionTimeoutFinal" value="3"/>
+    <add key="SessionTimeout" value="4"/>
+    <add key="SessionTimeoutWarning" value="45"/>
+  </appSettings>
   <system.web.extensions>
     <scripting>
       <webServices>
