--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -1,11 +1,12 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.25.51)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=sernac)));user id=sico_mancal;password=mancal_sico;" providerName="Oracle.DataAccess.Client"/>
+    <!--<add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.25.51)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=sernac)));user id=sico_mancal;password=mancal_sico;" providerName="Oracle.DataAccess.Client"/>-->
+    <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.29.113.254)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=desaapn)));user id=sico_mancal;password=SICO_MANCAL;" providerName="Oracle.DataAccess.Client"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
@@ -22,7 +23,7 @@
     <customErrors mode="Off"/>
     <httpHandlers>
       <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
-      <add verb="*" path="Telerik.ReportViewer.axd" type = "Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be" />
+      <add verb="*" path="Telerik.ReportViewer.axd" type="Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be"   />
     </httpHandlers>
   </system.web>
   <appSettings>
@@ -47,13 +48,28 @@
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
     <bindings>
       <basicHttpBinding>
-        <binding name="Encripta_wsSOAPBinding"/>
+        <binding name="Encripta_wsSOAPBinding" />
+        <binding name="Encripta_wsSOAPBinding1" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://WEB/ENCRIPTA_WS_WEB/awws/Encripta_ws.awws" binding="basicHttpBinding" bindingConfiguration="Encripta_wsSOAPBinding" contract="ServiceEncripta.Encripta_wsSOAPPortType" name="Encripta_wsSOAPPort"/>
+      <endpoint address="http://apngc2/ENCRIPTA_USR_WS_WEB/awws/Encripta_ws.awws"
+        binding="basicHttpBinding" bindingConfiguration="Encripta_wsSOAPBinding"
+        contract="SR_EncriptaPasswd.Encripta_wsSOAPPortType" name="Encripta_wsSOAPPort" />
+      <endpoint address="http://apngc2/ENCRIPTA_WS_WEB/awws/Encripta_ws.awws"
+        binding="basicHttpBinding" bindingConfiguration="Encripta_wsSOAPBinding1"
+        contract="ServiceReference1.Encripta_wsSOAPPortType" name="Encripta_wsSOAPPort1" />
     </client>
   </system.serviceModel>
 </configuration>
