--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -27,6 +27,13 @@
       <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
       <add verb="*" path="Telerik.ReportViewer.axd" type="Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be"   />      
     </httpHandlers>
+  <webServices>
+    <protocols>
+      <add name="HttpPost"/>
+      <add name="HttpGet"/>
+      <add name="HttpPostLocalhost"/>
+    </protocols>
+  </webServices>
   </system.web>
   <appSettings>
     <add key="SessionTimeoutFinal" value="3"/>
@@ -65,7 +72,12 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <add name="Telerik.ReportViewer.axd_*" path="Telerik.ReportViewer.axd" verb="*" type ="Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be" preCondition="integratedMode"/>
-    </handlers>
+      <add name="Telerik.ReportViewer.axd_*" path="Telerik.ReportViewer.axd" verb="*" type="Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms, Version=9.0.15.225, Culture=neutral, PublicKeyToken=a9d7983dfcc261be"  preCondition="integratedMode"/>
+    </handlers>    
+    <!--<httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="http://www.webservicex.net/geoipservice.asmx" />
+      </customHeaders>
+    </httpProtocol>-->
   </system.webServer>
 </configuration>
