--- a/MANCAL_WEB/MANCAL_WEB/Web.config
+++ b/MANCAL_WEB/MANCAL_WEB/Web.config
@@ -8,7 +8,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.25.51)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=sernac)));user id=sico_mancal;password=mancal_sico;" providerName="Oracle.DataAccess.Client"/>-->
-    <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.29.113.254)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=desaapn)));user id=sico_mancal;password=SICO_MANCAL;" providerName="Oracle.DataAccess.Client"/>
+    <add name="ora_sico_mancal" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.29.113.254)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=desaapn)));user id=sico_mancal_test;password=SICO_MANCAL_TEST;" providerName="Oracle.DataAccess.Client"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
